<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:fitsSystemWindows="true">

       <com.google.android.material.appbar.CollapsingToolbarLayout
           android:id="@+id/collapsingTL"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:fitsSystemWindows="true"
           app:layout_scrollFlags="scroll|exitUntilCollapsed" >

           <ImageView
               android:id="@+id/banner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_collapseMode="parallax"
               app:layout_collapseParallaxMultiplier="1.2"
               android:src="@drawable/banner"/>

           <androidx.appcompat.widget.LinearLayoutCompat
               android:id="@+id/categoryLL"
               android:layout_marginStart="16dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom"
               android:orientation="horizontal">

               <Button
                   android:id="@+id/pizzaBtn"
                   android:layout_width="88dp"
                   android:layout_height="35dp"
                   android:text="@string/pizza"
                   style="@style/CategoryButtonStyleOpen"/>

               <Button
                   android:id="@+id/comboBtn"
                   android:layout_width="88dp"
                   android:layout_height="35dp"
                   android:layout_marginStart="8dp"
                   android:text="@string/combo"
                   style="@style/CategoryButtonStyle"/>

               <Button
                   android:id="@+id/dessertsBtn"
                   android:layout_width="88dp"
                   android:layout_height="35dp"
                   android:layout_marginStart="8dp"
                   android:text="@string/desserts"
                   style="@style/CategoryButtonStyle"/>

               <Button
                   android:id="@+id/drinksBtn"
                   android:layout_width="88dp"
                   android:layout_height="35dp"
                   android:layout_marginStart="8dp"
                   android:text="@string/drinks"
                   style="@style/CategoryButtonStyle"/>

           </androidx.appcompat.widget.LinearLayoutCompat>

           <androidx.appcompat.widget.Toolbar
               android:id="@+id/toolBar"
               android:layout_width="match_parent"
               android:layout_height="100dp"
               app:layout_collapseMode="pin">

               <TextView
                   android:id="@+id/cityTv"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="16dp"
                   android:text="@string/city"/>

               <ImageView
                   android:id="@+id/arrowDown"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/keyboard_arrow_down" />

               <ImageView
                   android:id="@+id/qrCode"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="16dp"
                   android:src="@drawable/qr_code"
                   android:layout_gravity="right"/>



           </androidx.appcompat.widget.Toolbar>

       </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menuRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                tools:listitem="@layout/menu_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        app:menu="@menu/bottom_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:itemTextColor="#7B7B7B"
        android:background="#F0F0F0"
        android:layout_gravity="bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>